--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="chengyu_search" translatable="false">成语查询</string>
     <string name="tuwen_search" translatable="false">图文查询</string>
     <string name="one_sentence_every_day" translatable="false">每日一句</string>
+    <string name="word_detail" translatable="false">文字详情</string>
 </resources>
