--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">中华字典</string>
     <string name="search_hanzi_hint" translatable="false">请输入查询汉字</string>
+    <string name="search_chengyu_hint" translatable="false">请输入查询成语</string>
     <string name="pinyin_search" translatable="false">拼音查询</string>
     <string name="bushou_search" translatable="false">部首查询</string>
     <string name="chengyu_search" translatable="false">成语查询</string>
@@ -8,4 +9,6 @@
     <string name="one_sentence_every_day" translatable="false">每日一句</string>
     <string name="word_detail" translatable="false">文字详情</string>
     <string name="ocr">图片识别</string>
+    <string name="search_history">历史记录</string>
+    <string name="chengyu_detail">成语详情</string>
 </resources>
