--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="ocr">图片识别</string>
     <string name="search_history">历史记录</string>
     <string name="chengyu_detail">成语详情</string>
+    <string name="setting">设置</string>
+    <string name="collect">收藏</string>
+    <string name="feedback">反馈</string>
+    <string name="evaluate">好评</string>
+    <string name="share">分享</string>
+    <string name="about_us">关于我们</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
